manifests/juice-shop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop
  labels:
    app: juice-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juice-shop
  template:
    metadata:
      labels:
        app: juice-shop
    spec:
      volumes:
      - name: well-known-csaf
        emptyDir: {}
      containers:
      - name: juice-shop
        image: bkimminich/juice-shop:v20.2.0
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: well-known-csaf
          mountPath: /juice-shop/.well-known/csaf
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop: [ "ALL" ]
