manifests/juice-shop/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: juice-shop
spec:
  type: ClusterIP
  selector:
    app: juice-shop
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
